WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311547
SelectorQueryCache::add() should not evict cache entries unnecessarily
https://bugs.webkit.org/show_bug.cgi?id=311547
Summary
SelectorQueryCache::add() should not evict cache entries unnecessarily
Chris Dumez
Reported
2026-04-05 19:54:05 PDT
SelectorQueryCache::add() should not evict cache entries unnecessarily.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-05 19:55:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62101
EWS
Comment 2
2026-04-06 02:17:27 PDT
Committed
310632@main
(6e66de4fdc30): <
https://commits.webkit.org/310632@main
> Reviewed commits have been landed. Closing PR #62101 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-06 02:18:13 PDT
<
rdar://problem/174148115
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug