SelectorQueryCache::add() should not evict cache entries unnecessarily https://bugs.webkit.org/show_bug.cgi?id=311547

Reviewed by Anne van Kesteren.

Previously, a random cache entry was evicted before checking if the
selector was already cached. This could wastefully evict a valid entry
on cache hit, or even evict the very entry about to be looked up.

Move eviction after ensure() so it only happens when a new entry is
actually inserted.

* Source/WebCore/dom/SelectorQuery.cpp:
(WebCore::SelectorQueryCache::add):

Canonical link: https://commits.webkit.org/310632@main